<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView

        android:layout_width="412dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/honor"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_honorMainActivity"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/orig"
                app:riv_corner_radius="15dp"
                android:layout_marginHorizontal="10dp"
                tools:ignore="MissingConstraints"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/comedy"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_comedyMainActivity"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/orig"
                app:riv_corner_radius="15dp"
                android:layout_marginHorizontal="10dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/family"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_familyMainActivity"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/orig"
                app:riv_corner_radius="15dp"
                android:layout_marginHorizontal="10dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/panel"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/main_but" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/main_b"
                android:textColor="@color/panel_word"
                android:textSize="15sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:onClick="to_cinema"
                android:src="@drawable/kino_but" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/kino_b"
                android:textColor="@color/panel_word"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/ser_but" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ser_b"
                android:textColor="@color/panel_word"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/bm_but" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/bm_b"
                android:textColor="@color/panel_word"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular_loading_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

