<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cinema"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinema_background"
    tools:context=".CinemaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageCinema"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:scaleType="centerCrop"
            android:src="@drawable/interstellar">
        </ImageView>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cinema_text"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"
                    android:text="@string/imdb"/>
                <TextView
                    android:id="@+id/rating_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cinema_text"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"
                    android:text="8.70"/>
            </LinearLayout>
            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/cinema_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:text="18+"/>
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/cinema_text"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:text="169 мин."/>
        </LinearLayout>
        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/cinema_text"
            android:textStyle="normal"
            android:fontFamily="@font/roboto_bold"
            android:textSize="17sp"
            android:text="фантастика, драма, приключения"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:id="@+id/watch_video"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/play"/>
            <ImageButton
                android:id="@+id/download_video"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/download"/>
        </LinearLayout>
        <TextView
                android:id="@+id/descriptions"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:gravity="left"
                android:textColor="@color/cinema_text_desc"
                android:fontFamily="@font/roboto_bold"
                android:textSize="12sp"
                android:text="Когда засуха, пыльные бури и вымирание растений приводят человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и найти планету с подходящими для человечества условиями."/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="bottom"
        android:background="@color/panel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/cardview_default_radius">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/main_but">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_b"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:textColor="@color/panel_word"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/cardview_default_radius">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/kino_but"
                android:contentDescription="@null">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kino_b"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:textColor="@color/panel_word"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/cardview_default_radius">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ser_but"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@null">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ser_b"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:textColor="@color/panel_word"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/cardview_default_radius">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/bm_but"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@null">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bm_b"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:textColor="@color/panel_word"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>